test/classes/initializers/siblingCall/parallelSiblingCall.good
parallelSiblingCall.chpl:4: In initializer:
parallelSiblingCall.chpl:5: error: use of this.init() call in a parallel statement
